# myeva

./: .gitignore  MyEva_PRD.md  MyEva_PRD_v2.md  MyEva_TaskBreakdown.md  MyEva_TechDoc.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: memory.rs  mod.rs  process.rs  task.rs
src-tauri/src/db/: models.rs  store.rs
src-tauri/src/process/: manager.rs
src/components/ChatInput/: ChatInput.tsx
src/components/Graph/: AgentNode.tsx  GraphCanvas.tsx  graphUtils.ts
src/components/LogViewer/: LogViewer.tsx  useLogBuffer.ts
src/components/TaskTree/: TaskNode.tsx  TaskTree.tsx
src/hooks/: useLayer1Api.ts  useProcess.ts  useTauriEvents.ts
src/store/: chatStore.ts  logStore.ts  processStore.ts  taskStore.ts
src/types/: index.ts
