[package]
name = "myeva"
version = "0.1.0"
description = "MyEva Desktop Task & Multi-Agent Management Tool"
authors = ["MyEva"]
edition = "2021"

[lib]
name = "myeva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
shell-words = "1"
